--- a/index.html
+++ b/index.html
@@ -54,10 +54,25 @@
             <section class="section home" data-section="section0">  
                 <div class="container">
                     <div class="section-heading">
-                        <h2></h2>
+                        <h2>Welcome to My Portfolio</h2>
+                        <div class="line-dec"></div>
+                        <span>Get to know more about me and my work.</span>
                     </div>
-                </div>
-                <div class="">
+
+                    <div class="home-content">
+                        <div class="row">
+                            <div class="column-left">
+                                <div class="left-text">
+                                    <h3>Hello, I'm Barnali Kundu. . .</h3>
+                                    <p>I am a passionate web developer with a knack for creating beautiful, responsive, and user-friendly websites. Let's explore my journey in the world of web development and see what I can bring to your next project.</p>
+                                    <a href="#my-skills">Explore My Skills</a>
+                                </div>
+                            </div>
+                            <div class="column-right">
+                                <img src="images/your-photo.jpg" alt="[Your Name]" class="profile-img">
+                            </div>
+                        </div>
+                    </div>
 
                 </div>
             </section>
