--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                         <nav class="main-nav" role="navigation">
                             <ul class="main-menu">
                               <li><a href="#section0">Home</a></li>
-                              <li><a href="#about-me">About me</a></li>
-                              <li><a href="#my-skills">Skills</a></li>
-                              <li><a href="#projects">Projects</a></li>
-                              <li><a href="#contact">Contact Me</a></li>
+                              <li><a href="#section1">About me</a></li>
+                              <li><a href="#section2">Skills</a></li>
+                              <li><a href="#section3">Projects</a></li>
+                              <li><a href="#section4">Contact Me</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -51,7 +51,7 @@
 
        
             <!--HOME-->
-            <section class="section home" data-section="section0">  
+            <section class="section home" id="section0">  
                 <div class="container">
                     <div class="section-heading">
                         <h2>Welcome to My Portfolio</h2>
@@ -65,7 +65,7 @@
                                 <div class="left-text">
                                     <h3>Hello, I'm Barnali Kundu. . .</h3>
                                     <p>I am a passionate web developer with a knack for creating beautiful, responsive, and user-friendly websites. Let's explore my journey in the world of web development and see what I can bring to your next project.</p>
-                                    <a href="#my-skills">Explore My Skills</a>
+                                    <a href="#section2">Explore My Skills</a>
                                 </div>
                             </div>
                             <div class="column-right">
@@ -78,7 +78,7 @@
             </section>
 
             <!--ABOUT ME-->
-            <section class="section about-me" data-section="section1">
+            <section class="section about-me" id="section1">
                 <div class="container">
                     <div class="section-heading">
                         <h2>About Me</h2>
@@ -114,7 +114,7 @@
             </section>
 
             <!--Skills-->
-            <section class="section my-skills" data-section="section2">
+            <section class="section my-skills" id="section2">
                 <div class="container">
                     <div class="section-heading">
                         <h2>Skills</h2>
@@ -185,7 +185,7 @@
             </section>
         
             <!--Projects-->
-            <section class="section projects" data-section="section3">
+            <section class="section projects" id="section3">
                 <div class="container">
                     <div class="section-heading">
                         <h2>Projects</h2>
@@ -245,7 +245,7 @@
             </section>
 
             <!--Contact Me-->
-            <section class="section contact" data-section="section4">
+            <section class="section contact" id="section4">
                 <div class="container">
                     <div class="section-heading">
                         <h2>Contact Me</h2>
