--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
         <div id="page-wrap">
             <div class="responsive-nav">
-                <i class="fa fa-bars" id="menu-toggle"></i>
+                <i class="fa fa-bars" id="menu-toggle" href="#menu"></i>
                 <div id="menu" class="menu">
                     <i class="fa fa-times" id="menu-close"></i>
                     <div class="container">
