--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
             </section>
 
@@ -86,6 +85,7 @@
                         <span>
                         </span>
                     </div>
+
                     <div class="left-image-post">
                         <div class="row">
                             <div class="col-md-6">
@@ -126,58 +126,57 @@
                         <div class="left-image-post">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <div class="left-text">
-                                        <div class="column-left left">
-                                            <div class="text">My creative skills & experiences.</div>
-                                            <p>please go through my certifications<br> below here.</p>
-                                            <a href="" target="_blanck">Certifications <i class="fa fa-laptop"></i></a>
-                                        </div>
+                                    <div class="column-left left">
+                                        <div class="text">My creative skills & experiences in Crafting beautiful digital experiences</div>
+                                        <p>please go through my certifications<br> below here.</p>
+                                        <a href="" target="_blanck">Certifications <i class="fa fa-laptop"></i></a>
                                     </div>
-                                </div>
-                                <div class="column-right right">
-                                    <div class="bars">
-                                        <div class="info">
-                                        <span>HTML</span>
-                                        <span></span>
-                                        </div>
-                                        <div class="line html"></div>
-                                    </div>
-                                    <div class="bars">
-                                        <div class="info">
-                                        <span>CSS</span>
-                                        <span></span>
-                                        </div>
-                                        <div class="line css"></div>
-                                    </div>
-                                    <div class="bars">
-                                        <div class="info">
-                                        <span>JavaScript</span>
-                                        <span></span>
-                                        </div>
-                                        <div class="line js"></div>
-                                    </div>
-                                    <div class="bars">
-                                        <div class="info">
-                                        <span>Java</span>
-                                        <span></span>
-                                        </div>
-                                        <div class="line java"></div>
-                                    </div>
-                                    <div class="bars">
-                                        <div class="info">
-                                        <span>Python</span>
-                                        <span></span>
-                                        </div>
-                                        <div class="line python"></div>
-                                    </div>
-                                    <div class="bars">
-                                        <div class="info">
-                                            <span>SQL</span>
+                
+                                    <div class="column-right right">
+                                        <div class="bars">
+                                            <div class="info">
+                                            <span>HTML</span>
                                             <span></span>
+                                            </div>
+                                            <div class="line html"></div>
                                         </div>
-                                        <div class="line sql"></div>
-                                    </div>
-                                </div>   
+                                        <div class="bars">
+                                            <div class="info">
+                                            <span>CSS</span>
+                                            <span></span>
+                                            </div>
+                                            <div class="line css"></div>
+                                        </div>
+                                        <div class="bars">
+                                            <div class="info">
+                                            <span>JavaScript</span>
+                                            <span></span>
+                                            </div>
+                                            <div class="line js"></div>
+                                        </div>
+                                        <div class="bars">
+                                            <div class="info">
+                                            <span>Java</span>
+                                            <span></span>
+                                            </div>
+                                            <div class="line java"></div>
+                                        </div>
+                                        <div class="bars">
+                                            <div class="info">
+                                            <span>Python</span>
+                                            <span></span>
+                                            </div>
+                                            <div class="line python"></div>
+                                        </div>
+                                        <div class="bars">
+                                            <div class="info">
+                                                <span>SQL</span>
+                                                <span></span>
+                                            </div>
+                                            <div class="line sql"></div>
+                                        </div>
+                                    </div> 
+                                </div>  
                             </div>
                         </div>
                     </div>
@@ -255,7 +254,7 @@
                     <div class="contact" id="contact">
                         <div class="contact-content">
                             <div class="left-image-post">
-                                <div class="row">
+                                <div class="divide">
                                     <div class="col-md-6">
                                         <div class="left-text">
                                             <div class="column-left left">
